[package]
name = "threadalone"
version = "0.2.1"
authors = ["Junghyun Nam <hyun@cro.sh>", "David Tolnay <dtolnay@gmail.com>"]
categories = ["concurrency", "rust-patterns"]
description = "Make any value Send + Sync but only available on its original thread. Don't use on multi-threaded environments!"
documentation = "https://docs.rs/threadalone"
edition = "2018"
keywords = ["sync"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cr0sh/threadalone"
rust-version = "1.31"

[lib]
doc-scrape-examples = false

[dependencies]
pin-project = "1.0.12"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
